ct-transpiler/testsuite/good/LimitImport/LimitImport.hs
{-# LANGUAGE ComposableTypes #-}

module LimitImport where

import Init (Expr, Piece(Cons))

cons = Cons 0
