ct-transpiler/testsuite/bad/HidingPieceConstr/HidingPieceConstr.hs
{-# LANGUAGE ComposableTypes #-}

module HidingPieceConstr where

import Init hiding (Piece(Cons))

cons = Cons 0
